--- a/Site/css/perfil.css
+++ b/Site/css/perfil.css
@@ -1,1 +1,836 @@
-/* No CSS */
+.material-icons.md-30 {
+  font-size: 30px;
+}
+
+body {
+  margin: 0 auto;
+  background-color: #F5F5F5;
+  font-family: Raleway;
+}
+
+h1 {
+  font-size: 52px;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 25px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+header {
+  position: relative;
+  height: 218px;
+}
+
+nav {
+  margin-top: 17px;
+}
+
+nav a {
+  margin-left: 140px;
+  color: white;
+  font-size: 23px;
+  text-decoration: none;
+  -webkit-transition: .7s;
+  transition: .7s;
+}
+
+nav a:hover {
+  color: #b8b8b8;
+}
+
+nav a:first-of-type {
+  margin-left: 0px;
+}
+
+#caixao {
+  position: absolute;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #0BBAB3;
+  width: 100%;
+  height: 140px;
+  border-radius: 0px 0px 20px 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+#caixao form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 522px;
+  height: 56px;
+}
+
+#caixao input {
+  margin-left: 53px;
+  width: 100%;
+  height: 100%;
+  border-radius: 28px;
+  border: none;
+  outline: none;
+  font-family: "Raleway", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  color: #575757;
+  background-color: #E6E6E6;
+  padding-left: 30px;
+}
+
+#caixao input::-webkit-input-placeholder {
+  color: #B8B8B8;
+}
+
+#caixao input:-ms-input-placeholder {
+  color: #B8B8B8;
+}
+
+#caixao input::-ms-input-placeholder {
+  color: #B8B8B8;
+}
+
+#caixao input::placeholder {
+  color: #B8B8B8;
+}
+
+#caixao button {
+  height: 30px;
+  width: 30px;
+  margin: 13px 30px 13px -50px;
+  border: none;
+  background-color: #E6E6E6;
+  padding: 0px;
+}
+
+.conteudoHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 70%;
+}
+
+.linkUsuario, .linkCarrinho {
+  color: white;
+  text-decoration: none;
+}
+
+.linkUsuario img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+
+.perfilUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.perfilUsuario h4 {
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.perfilUsuario h4 span {
+  font-weight: lighter;
+}
+
+.carrinhoCompras {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  color: #FFF;
+  background-color: #4E2F00;
+}
+
+#caixinha {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #4E2F00;
+  width: 100%;
+  height: 78px;
+  border-radius: 0px 0px 20px 20px;
+  top: 120px;
+}
+
+footer {
+  margin-top: 40px;
+}
+
+div.tudinho {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #0BBAB3;
+  border-radius: 20px 20px 0px 0px;
+  height: 130px;
+  padding-top: 40px;
+}
+
+div.tudinho p.dev {
+  font-weight: 600;
+  color: white;
+}
+
+div.tudinho div.textito p.ti {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+div.tudinho div.textito p {
+  margin: 0;
+  color: white;
+  margin-bottom: 5px;
+}
+
+div.tudinho div.redes p {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+div.tudinho div.app p {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+div.tudinho div.app div.zap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+div.tudinho div.app img.aba {
+  margin-top: -10px;
+  margin-left: -15px;
+}
+
+div.tudinho div.app img.abb {
+  margin-top: 2px;
+  width: 170px;
+  height: 52px;
+}
+
+.material-icons.md-50 {
+  font-size: 50px;
+}
+
+.material-icons.md-40 {
+  font-size: 40px;
+}
+
+.material-icons.md-35 {
+  font-size: 35px;
+}
+
+.container {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 75%;
+  height: auto;
+}
+
+.caixaUsuario {
+  width: 36%;
+  height: 667px;
+  background-color: #E6E6E6;
+  border-radius: 25px;
+}
+
+.caixaTurquesa, .detalhesUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.caixaTurquesa {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 68%;
+  background-color: #0BBAB3;
+  border-radius: 25px;
+}
+
+.caixaTurquesa h2 {
+  margin-top: 15px;
+  margin-bottom: 0;
+  font-size: 34px;
+  color: #FFF;
+  font-weight: bold;
+}
+
+.imagemUsuario {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 173px 67px;
+      grid-template-rows: 173px 67px;
+  -ms-grid-columns: 149px 68px;
+      grid-template-columns: 149px 68px;
+  width: 217px;
+  height: 240px;
+}
+
+.imagemUsuario img {
+  width: 212px;
+  height: 212px;
+  border-radius: 70px;
+}
+
+.imagemUsuario button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-row: 2;
+  grid-row: 2;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  margin: 0;
+  width: 68px;
+  height: 68px;
+  line-height: 68px;
+  border-radius: 50%;
+  border: 0;
+  background-color: #FFF;
+  color: #0BBAB3;
+}
+
+.detalhesUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  color: #707070;
+  height: 190px;
+}
+
+.detalhesUsuario h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 10px;
+  font-size: 20px;
+  color: #575757;
+  font-weight: 400;
+}
+
+#editarInformacoes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  line-height: 0px;
+  width: 177px;
+  height: 55px;
+  border: 0;
+  border-radius: 20px;
+  font-size: 25px;
+  background-color: #9E9E9E;
+  font-family: 'Raleway';
+  font-weight: bold;
+  color: #FFF;
+}
+
+.detalheUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.dadosUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: auto;
+  min-height: 525px;
+}
+
+.dadosUsuario h2 {
+  margin-top: 10px;
+  margin-bottom: 15px;
+  font-size: 25px;
+  color: #575757;
+  font-weight: 300;
+}
+
+.cartoes, .enderecos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: auto;
+}
+
+.detalheCartao, .detalheEndereco {
+  margin-left: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 15px;
+  background-color: #E6E6E6;
+  color: #707070;
+}
+
+.detalheCartao h3, .detalheEndereco h3 {
+  font-weight: 500;
+}
+
+.detalheCartao {
+  min-width: 170px;
+  height: 89px;
+}
+
+.detalheEndereco {
+  min-width: 233px;
+  height: 101px;
+}
+
+.detalheEndereco h3 {
+  font-size: 18px;
+}
+
+.adicionar {
+  margin-left: 10px;
+  border-radius: 10px;
+  background-color: #818181;
+  width: 100px;
+  height: 100px;
+  border: 0;
+  color: #FFF;
+}
+
+.ajuda button, .deletar button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-left: 18px;
+  line-height: 0px;
+  width: 251px;
+  height: 78px;
+  border: 0;
+  border-radius: 25px;
+  font-size: 28px;
+  font-family: 'Raleway';
+  font-weight: bold;
+  color: #FFF;
+}
+
+.ajuda button {
+  background-color: #0BBAB3;
+}
+
+.deletar button {
+  background-color: #D90042;
+}
+
+.adicionarCartao {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  border-radius: 15px;
+  width: 851px;
+  height: 323px;
+  background-color: #FFF;
+}
+
+.adicionarCartao h4 {
+  margin-top: 0;
+  margin-bottom: 6px;
+}
+
+.cartaoContainer {
+  background-color: transparent;
+  width: 350px;
+  height: 200px;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+}
+
+.cartaoCredito {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: #707070;
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
+.cartaoContainer:hover .cartaoCredito {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.cartaoFrente, .cartaoVerso {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #E6E6E6;
+  border-radius: 10px;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.cartaoFrente {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 32px 36px 32px 44px 24px 32px;
+      grid-template-rows: 32px 36px 32px 44px 24px 32px;
+  -ms-grid-columns: 30px 84px 126px 77px 33px;
+      grid-template-columns: 30px 84px 126px 77px 33px;
+}
+
+.bandeiraCartao {
+  -ms-grid-row: 2;
+  grid-row: 2;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  width: 58px;
+  height: 36px;
+  background-color: #D5D5D5;
+  border-radius: 7px;
+}
+
+.numeroCartao {
+  margin-top: 5px;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 3;
+  grid-column: 2 / 5;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3 / 4;
+  font-size: 25px;
+  font-family: 'Calibri';
+  font-weight: 300;
+}
+
+.nomeCartao {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  -ms-grid-row: 5;
+  grid-row: 5;
+}
+
+.validadeCartao {
+  -ms-grid-column: 4;
+  grid-column: 4;
+  -ms-grid-row: 5;
+  -ms-grid-row-span: 1;
+  grid-row: 5 / 6;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.validadeCartao h5, .validadeCartao h6 {
+  margin: 0;
+}
+
+.validadeCartao h5 {
+  font-size: 20px;
+  font-family: 'Calibri';
+  font-weight: 300;
+}
+
+.validadeCartao h6 {
+  font-size: 7px;
+  text-align: right;
+}
+
+.informacoesCartao {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 332px;
+  height: 240px;
+}
+
+.informacoesCartao h4 {
+  font-size: 17px;
+  font-weight: bold;
+  color: #707070;
+}
+
+.informacoesCartao input[type=text] {
+  padding: 12px;
+  border-radius: 10px;
+  border: 0;
+  background-color: #F5F5F5;
+  outline: none;
+}
+
+.grande {
+  width: 332px;
+}
+
+.informacoesCurtas {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.informacoesCurtas input[type=text] {
+  width: 110px;
+}
+
+.cartaoVerso {
+  padding-top: 21px;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.faixaPreta {
+  width: 100%;
+  height: 41px;
+  background-color: black;
+}
+
+.assinaturaAutorizada {
+  margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.assinaturaAutorizada h6 {
+  margin: 0;
+  font-size: 7;
+  font-weight: 300;
+}
+
+.faixaBranca {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-flow: row-reverse;
+      flex-flow: row-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 240px;
+  height: 33px;
+  background-color: #FFF;
+}
+
+.faixaBranca h5 {
+  margin: 0;
+  margin-right: 10px;
+  font-family: 'Calibri';
+  font-size: 20px;
+}
+/*# sourceMappingURL=perfil.css.map */
