--- a/Site/sass/template.scss
+++ b/Site/sass/template.scss
@@ -10,12 +10,12 @@ $border-radius20: 20px;
 $border-radius10: 10px;
 $fonte: 'Raleway', sans-serif;;
 
+.material-icons.md-30 { font-size: 30px; }
 
 @mixin centralizar{ 
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
 }
 
 
@@ -74,15 +74,20 @@ nav
     }
 }
 
+
+
 #caixao
 {
     position: absolute;
     z-index: 1;
     @include centralizar;
+    justify-content: space-around;
     background-color: $ciano;
     width: 100%;
     height: 140px;
     border-radius: 0px 0px 20px 20px;
+    padding-left: 50px;
+    padding-right: 50px;
 
 
     form
@@ -126,14 +131,148 @@ nav
     
 }
 
+.conteudoHeader{
+    display: flex;
+    @include centralizar;
+    justify-content: space-around;
+    width: 70%;
+
+}
+
+.linkUsuario, .linkCarrinho{
+    color: white;
+    text-decoration: none;
+}
+
+.linkUsuario{
+    img{
+        width: 64px;
+        height: 64px;
+        border-radius: 50%;
+    }
+}
+
+.perfilUsuario{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    h4{
+        margin-left: 10px;
+        font-size: 18px;
+        font-weight: bold;
+        span{
+            font-weight: lighter;
+        }
+    }
+}
+
+.carrinhoCompras{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    color: #FFF;
+    background-color: $marrom;
+}
+
 #caixinha
 {
     position: absolute;
     @include centralizar;
+    justify-content: center;
     background-color: $marrom;
     width: 100%;
     height: 78px;
     border-radius: 0px 0px 20px 20px;
     top: 120px;
 }
+
+footer{
+    margin-top: 40px;
+}
+
+div.tudinho
+{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-around ;
+    background-color: $ciano;
+    border-radius: 20px 20px 0px 0px;
+    height: 130px;
+    padding-top: 40px;
+
+    p.dev
+    {
+        font-weight:600;
+        color:white;
+    }
+
+    div.textito
+    {
+
+        p.ti
+        {
+            margin: 0;
+            color: white;
+            font-weight:600;
+            font-size:20px;
+            margin-bottom:15px;
+        }
+
+        p
+        {
+            margin: 0;
+            color: white;
+            margin-bottom:5px;
+        }
+    }
+
+    div.redes
+    {
+        p
+        {
+            margin: 0;
+            color: white;
+            font-weight:600;
+            margin-bottom:15px;
+            font-size:20px;
+        }
+    }
+
+    div.app
+    {
+        p
+        {
+            margin: 0;
+            color: white;
+            font-weight:600;
+            margin-bottom:15px;
+            font-size:20px;
+        }
+
+        div.zap
+        {
+            display: flex;
+            flex-direction: row;
+        }
+
+        img.aba
+        {
+            margin-top:-10px;
+            margin-left:-15px;
+        }
+
+        img.abb
+        {
+            margin-top: 2px;
+            width: 170px;
+            height: 52px;
+        }
+    }
+}
+
+
 
