--- a/Site/css/carrinho.css
+++ b/Site/css/carrinho.css
@@ -1,3 +1,7 @@
+.material-icons.md-30 {
+  font-size: 30px;
+}
+
 body {
   margin: 0 auto;
   background-color: #F5F5F5;
@@ -59,13 +63,14 @@ nav a:first-of-type {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background-color: #0BBAB3;
   width: 100%;
   height: 140px;
   border-radius: 0px 0px 20px 20px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 #caixao form {
@@ -120,6 +125,74 @@ nav a:first-of-type {
   padding: 0px;
 }
 
+.conteudoHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 70%;
+}
+
+.linkUsuario, .linkCarrinho {
+  color: white;
+  text-decoration: none;
+}
+
+.linkUsuario img {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+}
+
+.perfilUsuario {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.perfilUsuario h4 {
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.perfilUsuario h4 span {
+  font-weight: lighter;
+}
+
+.carrinhoCompras {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  color: #FFF;
+  background-color: #4E2F00;
+}
+
 #caixinha {
   position: absolute;
   display: -webkit-box;
@@ -140,6 +213,84 @@ nav a:first-of-type {
   height: 78px;
   border-radius: 0px 0px 20px 20px;
   top: 120px;
+}
+
+footer {
+  margin-top: 40px;
+}
+
+div.tudinho {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #0BBAB3;
+  border-radius: 20px 20px 0px 0px;
+  height: 130px;
+  padding-top: 40px;
+}
+
+div.tudinho p.dev {
+  font-weight: 600;
+  color: white;
+}
+
+div.tudinho div.textito p.ti {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+div.tudinho div.textito p {
+  margin: 0;
+  color: white;
+  margin-bottom: 5px;
+}
+
+div.tudinho div.redes p {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+div.tudinho div.app p {
+  margin: 0;
+  color: white;
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+div.tudinho div.app div.zap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+div.tudinho div.app img.aba {
+  margin-top: -10px;
+  margin-left: -15px;
+}
+
+div.tudinho div.app img.abb {
+  margin-top: 2px;
+  width: 170px;
+  height: 52px;
 }
 
 button {
