--- a/Site/sass/template.scss
+++ b/Site/sass/template.scss
@@ -83,11 +83,11 @@ nav
     @include centralizar;
     justify-content: space-around;
     background-color: $ciano;
-    width: 100%;
+    width: 80%;
     height: 140px;
     border-radius: 0px 0px 20px 20px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 5%;
+    padding-right: 5%;
 
 
     form
