--- a/Site/css/home.css
+++ b/Site/css/home.css
@@ -2,6 +2,10 @@
   font-size: 30px;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0 auto;
   background-color: #F5F5F5;
@@ -30,7 +34,7 @@ header {
 }
 
 nav {
-  margin-top: 17px;
+  margin: 0;
 }
 
 nav a {
@@ -66,11 +70,11 @@ nav a:first-of-type {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #0BBAB3;
-  width: 100%;
+  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%;
   height: 140px;
   border-radius: 0px 0px 20px 20px;
-  padding-left: 50px;
-  padding-right: 50px;
 }
 
 #caixao form {
@@ -293,93 +297,16 @@ div.tudinho div.app img.abb {
   height: 52px;
 }
 
-body {
-  margin: 0 auto;
-  background-color: #F5F5F5;
-  font-family: Raleway;
-}
-
-h1 {
-  font-size: 52px;
-}
-
-h2 {
-  font-size: 40px;
-}
-
-h3 {
-  font-size: 25px;
-}
-
-h4 {
-  font-size: 20px;
-}
-
 header {
-  position: relative;
   height: 160px;
 }
 
-nav {
-  margin-top: 0px;
-}
-
-nav a {
-  margin-left: 140px;
-  color: white;
-  font-size: 23px;
-  text-decoration: none;
-  -webkit-transition: .7s;
-  transition: .7s;
-}
-
-nav a:hover {
-  color: #b8b8b8;
-}
-
-nav a:first-of-type {
-  margin-left: 0px;
-}
-
 #caixao {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #0BBAB3;
-  width: 100%;
-  height: 140px;
   border-radius: 0px;
 }
 
 #caixinha {
-  position: absolute;
   z-index: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #4E2F00;
-  width: 100%;
   height: 55px;
   border-radius: 20px;
   top: 120px;
@@ -535,6 +462,10 @@ div.produto {
   border-radius: 10px;
 }
 
+div.produto .teste {
+  color: black;
+}
+
 div.produto h4 {
   -ms-flex-item-align: end;
       align-self: flex-end;
@@ -542,11 +473,15 @@ div.produto h4 {
   margin-bottom: 0;
   font-size: 17px;
   font-weight: bold;
+  text-decoration: none;
+  color: black;
 }
 
 div.produto p {
   margin-top: 5px;
   margin-bottom: 0;
+  text-decoration: none;
+  color: black;
 }
 
 div.produto img.teste {
