--- a/Site/css/produto.css
+++ b/Site/css/produto.css
@@ -66,11 +66,11 @@ nav a:first-of-type {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #0BBAB3;
-  width: 100%;
+  width: 80%;
   height: 140px;
   border-radius: 0px 0px 20px 20px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 #caixao form {
