--- a/Site/sass/home.scss
+++ b/Site/sass/home.scss
@@ -1,9 +1,3 @@
-$ciano: #0BBAB3;
-$marrom: #4E2F00;
-$border-radius20: 20px;
-$border-radius10: 10px;
-$fonte: 'Raleway', sans-serif;;
-
 @import 'template';
 
 @mixin centralizar{ 
@@ -13,83 +7,23 @@ $fonte: 'Raleway', sans-serif;;
     justify-content: center;
 }
 
-body{
-    margin: 0 auto; 
-    background-color: #F5F5F5;
-    font-family: Raleway;
-}
-
-h1
-{
-    font-size: 52px;
-}
-
-h2
-{
-    font-size: 40px;
-}
-
-h3
-{
-    font-size: 25px;
-}
-
-h4
-{
-    font-size: 20px;
-}
-
-header
-{
-    position: relative; 
-    height: 160px; 
-}
-
-nav 
-{
-    margin-top:0px;
-    a 
-    {
-        margin-left: 140px;
-        color:white;
-        font-size:23px;
-        text-decoration: none;
-        transition:.7s;        
-    }
-
-    a:hover{
-        color:#b8b8b8;
-    }
-
-    a:first-of-type
-    {
-        margin-left: 0px;
-    }
+header{
+    height: 160px;
 }
 
 #caixao
 {
-    position: absolute;
-    @include centralizar;
-    background-color: $ciano;
-    width: 100%;
-    height: 140px;
     border-radius: 0px;
     
 }
 
 #caixinha
 {
-    position: absolute;
     z-index: 1;
-    @include centralizar;
-    background-color: $marrom;
-    width: 100%;
     height: 55px;
     border-radius: 20px;
     top: 120px;
 }
-
 
 div.home
 {   
@@ -202,19 +136,9 @@ div.produto{
     background-color: white;
     border-radius: 10px;
 
-    a.teste
+    .teste
     {  
-        h4
-        {
-            text-decoration: none;
-            color: black;
-        }
-
-        p
-        {
-            text-decoration: none;
-            color: black;
-        }
+        color: black;
     }
 
     h4
@@ -243,9 +167,6 @@ div.produto{
         
     }
 
-    
-        
-    
 }
 
 div.titulo
