--- a/Site/sass/template.scss
+++ b/Site/sass/template.scss
@@ -18,7 +18,9 @@ $fonte: 'Raleway', sans-serif;;
     align-items: center;
 }
 
-
+a{
+    text-decoration: none;
+}
 
 body{
     margin: 0 auto; 
@@ -54,7 +56,7 @@ header
 
 nav 
 {
-    margin-top:17px;
+    margin: 0;
     a 
     {
         margin-left: 140px;
@@ -83,11 +85,11 @@ nav
     @include centralizar;
     justify-content: space-around;
     background-color: $ciano;
-    width: 80%;
-    height: 140px;
-    border-radius: 0px 0px 20px 20px;
+    width: 90%;
     padding-left: 5%;
     padding-right: 5%;
+    height: 140px;
+    border-radius: 0px 0px 20px 20px;
 
 
     form
