--- a/Site/sass/mapa.scss
+++ b/Site/sass/mapa.scss
@@ -7,13 +7,16 @@
 
 div.topos
 {
-    margin-left: 270px;
+    margin-left: 2px;
     border-radius: 15px;
     background-color: #e6e6e6;
     height:50px;
     width: 1000px;
     @include centralizar;
     font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     color: #707070;
 }
 
