--- a/Site/css/cupons.css
+++ b/Site/css/cupons.css
@@ -2,6 +2,10 @@
   font-size: 30px;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0 auto;
   background-color: #F5F5F5;
@@ -30,7 +34,8 @@ header {
 }
 
 nav {
-  margin-top: 17px;
+  margin: 0;
+  margin-top: 10px;
 }
 
 nav a {
@@ -66,11 +71,11 @@ nav a:first-of-type {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #0BBAB3;
-  width: 80%;
-  height: 140px;
-  border-radius: 0px 0px 20px 20px;
+  width: 90%;
   padding-left: 5%;
   padding-right: 5%;
+  height: 140px;
+  border-radius: 0px 0px 20px 20px;
 }
 
 #caixao form {
@@ -293,7 +298,6 @@ div.tudinho div.app img.abb {
   height: 52px;
 }
 
-
 div.inicio {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -308,12 +312,23 @@ div.inicio {
   margin-left: 100px;
 }
 
-div.testezap
-{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.testezap {
   margin: 0 auto;
+  width: 80%;
+}
+
+.cupomContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 img.lista {
@@ -338,6 +353,7 @@ div.doisdivs {
 }
 
 div.cupom {
+  margin-top: 20px;
   width: 700px;
   height: 150px;
   display: -webkit-box;
@@ -346,6 +362,9 @@ div.cupom {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -353,33 +372,40 @@ div.cupom {
   background-color: #e6e6e6;
   border-radius: 20px;
   color: #818181;
-  margin-right: 30px;
-  margin-bottom: 30px;
   -webkit-box-shadow: 6px 11px 18px #888888;
           box-shadow: 6px 11px 18px #888888;
 }
 
-div.cupom div.texto {
-  margin-top: 10px;
-  margin-left: -30px;
+div.cupom div.texto h3 {
+  font-size: 30px;
+  font-weight: bold;
+  margin: 0;
+  margin-bottom: 5px;
 }
 
 div.cupom div.texto p {
+  margin: 0;
   font-size: 20px;
 }
 
 div.cupom button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 252px;
   height: 50px;
-  margin-top: 50px;
   background-color: #0BBAB3;
-  border-radius: 25px;
+  border-radius: 11px;
   border-style: none;
   font-family: "Raleway", sans-serif;
   color: white;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: bold;
-  -webkit-box-shadow: 5px 10px 18px #888888;
-          box-shadow: 5px 10px 18px #888888;
 }
 /*# sourceMappingURL=cupons.css.map */
