--- a/Site/css/feedback.css
+++ b/Site/css/feedback.css
@@ -2,6 +2,10 @@
   font-size: 30px;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0 auto;
   background-color: #F5F5F5;
@@ -30,7 +34,8 @@ header {
 }
 
 nav {
-  margin-top: 17px;
+  margin: 0;
+  margin-top: 10px;
 }
 
 nav a {
@@ -66,11 +71,11 @@ nav a:first-of-type {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #0BBAB3;
-  width: 80%;
-  height: 140px;
-  border-radius: 0px 0px 20px 20px;
+  width: 90%;
   padding-left: 5%;
   padding-right: 5%;
+  height: 140px;
+  border-radius: 0px 0px 20px 20px;
 }
 
 #caixao form {
@@ -304,7 +309,11 @@ div.inicio {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 100px;
+}
+
+main {
+  margin: 0 auto;
+  width: 50%;
 }
 
 img.lista {
@@ -325,7 +334,6 @@ div.pedido {
   width: 1000px;
   height: 200px;
   border-radius: 20px;
-  margin-left: 270px;
   -webkit-box-shadow: 5px 10px 18px #888888;
           box-shadow: 5px 10px 18px #888888;
 }
@@ -379,11 +387,14 @@ div.pedido h3.preco {
 
 p.nos {
   margin-top: 30px;
-  margin-left: 270px;
   font-size: 22px;
 }
 
 div.englobar {
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -392,7 +403,6 @@ div.englobar {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin-left: 270px;
 }
 
 div.englobar div.textao {
@@ -411,26 +421,6 @@ div.englobar div.textao textarea.inputo {
   -webkit-box-shadow: 5px 10px 18px #888888;
           box-shadow: 5px 10px 18px #888888;
   padding: 20px;
-}
-
-div.englobar div.textao button.butao {
-  width: 282px;
-  height: 67px;
-  margin-top: 15px;
-  margin-left: 380px;
-  background-color: #0BBAB3;
-  color: white;
-  -webkit-box-shadow: 5px 10px 18px #888888;
-          box-shadow: 5px 10px 18px #888888;
-  border-radius: 25px;
-  border-style: none;
-  font-family: "Raleway", sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-div.englobar div.imgs {
-  margin-left: 220px;
 }
 
 div.englobar div.imgs img.haro {
@@ -471,5 +461,21 @@ div.englobar div.imgs button.boto {
   border-radius: 20px;
   border-style: none;
   margin-left: -130px;
+}
+
+button.butao {
+  width: 282px;
+  height: 67px;
+  margin-top: 15px;
+  margin-left: 380px;
+  background-color: #0BBAB3;
+  color: white;
+  -webkit-box-shadow: 5px 10px 18px #888888;
+          box-shadow: 5px 10px 18px #888888;
+  border-radius: 25px;
+  border-style: none;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
 }
 /*# sourceMappingURL=feedback.css.map */
