--- a/Site/css/login.css
+++ b/Site/css/login.css
@@ -2,6 +2,10 @@
   font-size: 30px;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0 auto;
   background-color: #F5F5F5;
@@ -30,7 +34,8 @@ header {
 }
 
 nav {
-  margin-top: 17px;
+  margin: 0;
+  margin-top: 10px;
 }
 
 nav a {
@@ -66,11 +71,11 @@ nav a:first-of-type {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   background-color: #0BBAB3;
-  width: 80%;
-  height: 140px;
-  border-radius: 0px 0px 20px 20px;
+  width: 90%;
   padding-left: 5%;
   padding-right: 5%;
+  height: 140px;
+  border-radius: 0px 0px 20px 20px;
 }
 
 #caixao form {
@@ -304,7 +309,7 @@ main {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  height: 882px;
+  height: 36.458vw;
 }
 
 .login {
