--- a/Site/sass/cupons.scss
+++ b/Site/sass/cupons.scss
@@ -8,6 +8,18 @@ div.inicio
     margin-left: 100px;
 }
 
+.testezap{
+    margin: 0 auto;
+    width: 80%;
+}
+
+.cupomContainer{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 img.lista
 {
     height:30px;
@@ -30,42 +42,49 @@ div.doisdivs
 
 div.cupom
 {
+    margin-top: 20px;
     width:700px;
     height:150px;
     display:flex;
     justify-content: space-evenly;
+    align-items: center;
     flex-direction: row;
     background-color: #e6e6e6;
     border-radius: 20px;
     color:#818181;
-    margin-right:30px;
-    margin-bottom:30px;
     box-shadow: 6px 11px 18px #888888;
 
     div.texto
     {
-        margin-top:10px;
-        margin-left:-30px;
+        h3{
+            font-size: 30px;
+            font-weight: bold;
+            margin: 0;
+            margin-bottom: 5px;
+        }
 
         p
         {
+            margin: 0;
             font-size:20px;            
         }
     }
 
     button
     {   
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
         width:252px;
         height:50px;
-        margin-top:50px;
         background-color: $ciano;
-        border-radius: 25px;
+        border-radius: 11px;
         border-style: none;
         font-family: $fonte;
         color:white;
-        font-size: 15px;
+        font-size: 20px;
         font-weight: bold;
-        box-shadow: 5px 10px 18px #888888;
     }
 }
 
