--- a/Site/sass/login.scss
+++ b/Site/sass/login.scss
@@ -1,12 +1,12 @@
 @import 'template';
 
-main
+main 
 {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height:882px;
+    height:36.458vw;
 }
 
 .login
