--- a/Site/css/pesquisa.css
+++ b/Site/css/pesquisa.css
@@ -35,6 +35,7 @@ header {
 
 nav {
   margin: 0;
+  margin-top: 10px;
 }
 
 nav a {
@@ -77,7 +78,7 @@ nav a:first-of-type {
   border-radius: 0px 0px 20px 20px;
 }
 
-#caixao form {
+#caixao .searchHolder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -120,7 +121,7 @@ nav a:first-of-type {
   color: #B8B8B8;
 }
 
-#caixao button {
+#enterinvisible {
   height: 30px;
   width: 30px;
   margin: 13px 30px 13px -50px;
@@ -307,6 +308,7 @@ div.tudo {
 
 div.resultado {
   margin-left: 30px;
+  min-height: 600px;
 }
 
 div.resultado p.resultados {
@@ -326,7 +328,6 @@ div.produtos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -342,12 +343,23 @@ div.produto {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding-left: 10px;
   margin-left: 10px;
   background-color: white;
   border-radius: 10px;
-  height: 240px;
-  
+  height: 260px;
+}
+
+div.produto a {
+  color: #000;
+  min-width: 200px;
+  max-width: 200px;
 }
 
 div.produto h4 {
@@ -362,8 +374,9 @@ div.produto p {
   margin-bottom: 0;
 }
 
-div.produto img.teste {
+div.produto img {
   width: 170px;
+  height: 170px;
   height: auto;
 }
 
