--- a/Site/css/produto.css
+++ b/Site/css/produto.css
@@ -35,6 +35,7 @@ header {
 
 nav {
   margin: 0;
+  margin-top: 10px;
 }
 
 nav a {
@@ -77,7 +78,7 @@ nav a:first-of-type {
   border-radius: 0px 0px 20px 20px;
 }
 
-#caixao form {
+#caixao .searchHolder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -120,7 +121,7 @@ nav a:first-of-type {
   color: #B8B8B8;
 }
 
-#caixao button {
+#enterinvisible {
   height: 30px;
   width: 30px;
   margin: 13px 30px 13px -50px;
