--- a/Site/sass/pesquisa.scss
+++ b/Site/sass/pesquisa.scss
@@ -11,6 +11,7 @@ div.tudo
 div.resultado
 {
     margin-left:30px;
+    min-height: 600px;
     
     p.resultados
     {
@@ -40,12 +41,19 @@ div.produto
     
     display: flex;
     flex-direction: column;
-    
+    align-items: center;
+    justify-content: center;
     padding-left:10px;
     margin-left: 10px;
     background-color: white;
     border-radius: 10px;
-    height:240px;
+    height:260px;
+
+    a{
+        color: #000; 
+        min-width:200px; 
+        max-width:200px;
+    }
 
     h4
     {
@@ -61,9 +69,10 @@ div.produto
         margin-bottom:0;
     }
 
-    img.teste
+    img
     {
         width:170px;
+        height: 170px;
         height:auto;
         
     }
