--- a/Site/sass/home.scss
+++ b/Site/sass/home.scss
@@ -123,54 +123,66 @@ div.home
 }
 
 div.produtos{
-    
-    width: 100%;
-    border-radius: 20px;
     margin: 0 auto;
-    
+    margin-right: -15px;
+    width: 100%;
+    a{
+        color: #000;
+    }
 }
   
-div.produto{
-    
+.produto{
+    margin-right: 15px;
+    width: 205px;
+    height: 279px;
+    background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    padding-left:20px;
-    margin-left: 10px;
-    background-color: white;
-    border-radius: 10px;
+    border-radius: 20px;
+}
 
-    .teste
-    {  
-        color: black;
+.fundoIMGProduto{
+    align-self: end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 190px;
+    height: 190px;
+    border-radius: 20px;
+    background-color: #64CBC7;
+
+    img{
+        width: 160px;
+        height: 160px;
+    }
+}
+
+.textoProduto{
+    align-self: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 185px;
+    height: 88px;
+    h4, h5{
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
-    h4
-    {
-        align-self: flex-end;
-        margin-top: 15px;
-        margin-bottom:0;
-        font-size:17px;
+    h4{
+        font-size: 16px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        font-size: 19px;
         font-weight: bold;
-        text-decoration: none;
-        color: black;
     }
 
-    p
-    {
-        margin-top: 5px;
-        margin-bottom:0;
-        text-decoration: none;
-        color: black;
+    h5{
+        font-size: 12px;
     }
-
-    img.teste
-    {
-        width:170px;
-        height:auto;
-        
-    }
-
 }
 
 div.titulo
