--- a/Site/sass/pesquisa.scss
+++ b/Site/sass/pesquisa.scss
@@ -3,155 +3,82 @@
 div.tudo
 {
     display:flex;
-    width:1350px;
-    margin: 0 auto;
-    
-}
-
-div.resultado
-{
-    margin-left:30px;
+    flex-direction: column;
+    width: 82%;
     min-height: 600px;
-    
-    p.resultados
-    {
-        font-size:20px;
-        margin-top:0px;
-        margin-bottom:15px;
-        margin-left:10px;
-    }
+    margin: 0 auto;
 
     h2
     {
-        margin-top:35px;
-        margin-left:10px;
+        margin-top: 10px;
         margin-bottom:10px;
     }
 }
 
 div.produtos
 {
+    margin-top: -20px;
+    width: 100%;
     display:flex;
     flex-direction: row;
-    margin-bottom:10px;
-}
-
-div.produto
-{
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-left:10px;
-    margin-left: 10px;
-    background-color: white;
-    border-radius: 10px;
-    height:260px;
+    flex-wrap: wrap;
 
     a{
-        color: #000; 
-        min-width:200px; 
-        max-width:200px;
+        color: black;
+    }
+}
+
+.produto{
+    margin-right: 15px;
+    margin-top: 20px;
+    width: 205px;
+    height: 279px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+}
+
+.fundoIMGProduto{
+    align-self: end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 190px;
+    height: 190px;
+    border-radius: 20px;
+    background-color: #64CBC7;
+
+    img{
+        width: 160px;
+        height: 160px;
+    }
+}
+
+.textoProduto{
+    align-self: end;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 185px;
+    height: 88px;
+    h4, h5{
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
-    h4
-    {
-        margin-top: 15px;
-        margin-bottom:0;
-        font-size:17px;
+    h4{
+        font-size: 16px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        font-size: 19px;
         font-weight: bold;
     }
 
-    p
-    {
-        margin-top: 5px;
-        margin-bottom:0;
-    }
-
-    img
-    {
-        width:170px;
-        height: 170px;
-        height:auto;
-        
+    h5{
+        font-size: 12px;
     }
 }
-
-div.barra
-{
-    background-color:white;
-    border-radius: 20px;
-    padding-left:20px;
-    padding-right: 20px;
-    margin-top: 40px;
-
-    p
-    {
-        font-size:22px;
-        margin-top:0px;
-        margin-bottom:10px;
-        margin-left:65px;
-    }
-
-    h2
-    {
-        margin-top:35px;
-        margin-left:7px;
-        margin-bottom:10px;
-    }
-
-    ul
-    {
-        margin-left:-20px;
-        font-size:22px;
-        
-    }
-
-    li
-    {
-        color:white;
-        margin-left:20px;
-        font-size:18px;
-        margin-top: 5px;
-    }
-
-    a
-    {
-        color:black;
-    }
-}
-
-.slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 15px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-    border-radius: 12px;
-  }
-  
-  .slider:hover {
-    opacity: 1;
-  }
-  
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    background: $ciano;
-    cursor: pointer;
-    border-radius: 12px;
-  }
-  
-  .slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    background: $ciano;
-    cursor: pointer;
-    
-  }
