--- a/Site/css/home.css
+++ b/Site/css/home.css
@@ -78,7 +78,7 @@ nav a:first-of-type {
   border-radius: 0px 0px 20px 20px;
 }
 
-#caixao .searchHolder {
+div.searchHolder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -90,7 +90,7 @@ nav a:first-of-type {
   height: 56px;
 }
 
-#caixao input {
+input {
   margin-left: 53px;
   width: 100%;
   height: 100%;
@@ -105,19 +105,19 @@ nav a:first-of-type {
   padding-left: 30px;
 }
 
-#caixao input::-webkit-input-placeholder {
+input::-webkit-input-placeholder {
   color: #B8B8B8;
 }
 
-#caixao input:-ms-input-placeholder {
+input:-ms-input-placeholder {
   color: #B8B8B8;
 }
 
-#caixao input::-ms-input-placeholder {
+input::-ms-input-placeholder {
   color: #B8B8B8;
 }
 
-#caixao input::placeholder {
+input::placeholder {
   color: #B8B8B8;
 }
 
