--- a/Site/css/pedidos.css
+++ b/Site/css/pedidos.css
@@ -298,7 +298,221 @@ div.tudinho div.app img.abb {
   height: 52px;
 }
 
-div.tudo {
-  background-color: black;
+main {
+    margin: 0 auto;
+    width: 70%;
+  }
+
+div.titulo
+{
+  display:flex;
+  flex-direction: row;
+  width:220px;
+  justify-content: space-between;
+  margin-top: 15px;
 }
+
+div.titulo img
+{
+  width: 35px;
+  height: 40px;
+  margin-top: 4px;
+}
+
+div.titulo p
+{
+  font-size: 25px;  
+  margin-top: 12px;
+  font-weight: 600;
+}
+
+p.emAberto
+{
+  font-size: 25px;
+  font-weight: 300;
+}
+
+div.pedido
+{
+  display: flex;
+  flex-direction: row;
+}
+
+div.emAberto
+{
+  background-color: white;
+  padding: 25px;
+  border-radius: 13px;
+  display: flex;
+  flex-direction: column;
+  width: 575px;
+  margin-right: 40px;
+  min-height: auto;
+}
+
+div.cima
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+div.baixo
+{
+  display: flex;
+  flex-direction: row;
+  margin-left: 0px;
+  justify-content: space-evenly;
+}
+
+img.bolo
+{
+  margin-left:-135px;
+  margin-right: 30px;
+}
+
+p.pedido
+{
+  font-size:27px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+div.aCaminho
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width:150px;
+  margin-top: 4px;
+}
+
+.aCaminho img
+{
+  width:34px;
+  height: 30px;
+  margin-top: 10px;
+}
+
+.aCaminho p
+{
+  font-size: 20px;
+  margin-top: 13px;
+}
+
+p.total
+{
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 12px;
+  margin-bottom: 13px;
+}
+
+p.preco
+{
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 17px;
+}
+
+div.dir
+{
+  margin-top: px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 130px;
+}
+
+button.rastreio
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 51px;
+  background-color: #0BBAB3;
+  border: none;
+  font-family: 'Raleway', sans-serif;;
+  font-weight: bold;
+  font-size: 20px;
+  color:#fff;
+  border-radius: 13px;
+}
+
+button.cancela
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 51px;
+  background-color: #E6E6E6;
+  border: none;
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  color:#575757;
+  border-radius: 13px;
+}
+
+p.item
+{
+  margin-left: 20px;
+  margin-top:0;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+p.boloTitulo
+{
+  margin-bottom:0px;
+  margin-top:30px;
+  font-size:27px;
+  font-weight: bold;
+}
+
+p.boloLegenda
+{
+  margin-top:5px;
+}
+
+p.fino
+{
+  margin-top: 35px;
+  margin-bottom:0px;
+  font-size: 20px;
+}
+
+p.bold
+{
+  font-weight: bold;
+  margin-top: 10px;
+  font-size: 20px;
+}
+
+button.rastreio img
+{
+  margin-left: 10px;
+}
+
+button.problema
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 51px;
+  background-color: #88002A;
+  border: none;
+  font-family: 'Raleway', sans-serif;;
+  font-weight: bold;
+  font-size: 20px;
+  color:#fff;
+  border-radius: 13px;
+}
+
+
+
 /*# sourceMappingURL=pedidos.css.map */
